toolchain/internal/core/analysis/testdata/errors/collisions/proc_output_collision.vdl
// @expect: E901
// Type collides with auto-generated CreateUserOutput from proc CreateUser

rpc Users {
  proc CreateUser {
    input {
      name: string
    }

    output {
      id: string
    }
  }
}

type CreateUserOutput {
  success: bool
}
